feat(comment): add total liked & disliked
