# src/features/auth/auth.controller.ts
@@ -1,30 +1,56 @@
-import { Body, Controller, Post, Route, Tags } from 'tsoa';
-import { injectable, registry } from 'tsyringe';
-import { AuthService } from './auth.service';
-import { LoginDTO, RegisterDTO } from './dtos';
-import userModel from './schemas/user.schema';
+import formattedResponse from "@src/shared/commons/response";
+import { RequestWithUser } from "@src/shared/interfaces/request";
+import isAuthenticated from "@src/shared/middlewares/auth.middleware";
+import {
+  Body,
+  Controller,
+  Get,
+  Middlewares,
+  Post,
+  Request,
+  Route,
+  Tags,
+} from "tsoa";
+import { injectable, registry } from "tsyringe";
+import { AuthService } from "./auth.service";
+import { LoginDTO, RegisterDTO } from "./dtos";
+import userModel from "./schemas/user.schema";
 
 @registry([
   {
-    token: 'USER',
-    useFactory: () => userModel
-  }
+    token: "USER",
+    useFactory: () => userModel,
+  },
 ])
-@Tags('auth')
-@Route('auth')
+@Tags("auth")
+@Route("auth")
 @injectable()
 export class AuthController extends Controller {
   constructor(private readonly authService: AuthService) {
     super();
   }
 
-  @Post('/login')
-  login(@Body() payload: LoginDTO) {
-    return this.authService.login(payload);
+  @Get("/me")
+  @Middlewares(isAuthenticated)
+  getMe(@Request() req: RequestWithUser) {
+    return formattedResponse({
+      data: req.user,
+    });
   }
 
-  @Post('/register')
-  register(@Body() payload: RegisterDTO) {
-    return this.authService.register(payload);
+  @Post("/login")
+  async login(@Body() payload: LoginDTO) {
+    const token = await this.authService.login(payload);
+    return formattedResponse({
+      data: token,
+    });
+  }
+
+  @Post("/register")
+  async register(@Body() payload: RegisterDTO) {
+    await this.authService.register(payload);
+    return formattedResponse({
+      message: "user registered successfully",
+    });
   }
 }
