# src/features/comments/dtos/get-comments.dto.ts
@@ -1,0 +1,9 @@
+export enum CommentOrderBy {
+  MOST_LIKED = "most-liked",
+  MOST_DISLIKED = "most-disliked",
+  NEWEST = "newest",
+}
+
+export interface GetCommentsDTO {
+  orderBy?: CommentOrderBy;
+}
